syntax = "proto3";

package greptime.v1;

import "greptime/v1/column.proto";

message DatabaseRequest {
  string name = 1;
  repeated ObjectExpr exprs = 2;
}

message DatabaseResponse {
  repeated ObjectResult results = 1;
}

message ObjectExpr {
  ExprHeader header = 1;
  oneof expr {
    InsertExpr insert = 2;
    SelectExpr select = 3;
    UpdateExpr update = 4;
    DeleteExpr delete = 5;
    CreateExpr create = 6;
  }
}

message ExprHeader {
  uint32 version = 1;
}

// TODO(fys): Only support sql now, and will support promql etc in the future
message SelectExpr {
  oneof expr {
    string sql = 1;
    PhysicalPlan physical_plan = 15;
  }
}

message PhysicalPlan {
  bytes original_ql = 1;
  bytes plan = 2;
}

message InsertExpr {
  string table_name = 1;
  repeated bytes values = 2;
}

// TODO(jiachun)
message UpdateExpr {}
// TODO(jiachun)
message DeleteExpr {}

message CreateExpr {
  optional string catalog_name = 1;
  optional string schema_name = 2;
  string table_name = 3;
  optional string desc = 4;
  repeated ColumnDef column_defs = 5;
  string time_index = 6;
  repeated string primary_keys = 7;
  bool create_if_not_exists = 8;
}

message ObjectResult {
  ResultHeader header = 1;
  oneof result {
    SelectResult select = 2;
    MutateResult mutate = 3;
  }
}

message SelectResult {
  bytes raw_data = 1;
}

message ResultHeader {
  uint32 version = 1;
  uint32 code = 2;
  string err_msg = 3;
}

message MutateResult {
  uint32 success = 1;
  uint32 failure = 2;
}
